--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">ParallaxView</string>
     <string name="card_description">The Milky Way is the galaxy that includes the Solar System, with the name describing the galaxy\'s appearance from Earth: a hazy band of light seen in the night sky formed from stars that cannot be individually distinguished by the naked eye.</string>
-    <string name="card_title">Milk Way Galaxy</string>
-    <string name="example_text">Os preceitos do SENHOR são justos, e proporcionam alegria ao coração. Os mandamentos do SENHOR são cristalinos e iluminam o entedimento</string>
+    <string name="example_text">We had an alien in our neighborhood once. We called him 3 feet Billy. He talked about how he was charged for throwing a late night christmas party back in his planet</string>
 </resources>
